hphp/test/slow/parser/hh-namespace-conflict-4.php.expectf

Fatal error: Cannot declare Blah\string because the name was explicitly used earlier via a `use' statement on line 3%s on line 4
